--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <h1>Bài tập</h1>
     <ul>
-        <li><a href="file:///C:/Users/admin/Documents/btapweb/bai1.html" target="_blank"> Bài 1</a></li>
-        <li><a href="file:///C:/Users/admin/Documents/btapweb/2,1.html">Bài 2,1</a></li>
-        <li><a href=" file:///C:/Users/admin/Documents/btapweb/2,2.html" target="_blank">Bài 2,2</a></li>
-        <li><a href="file:///C:/Users/admin/Documents/btapweb/2,3.html" target="_blank">Bài 2,3</a></li>
-        <li><a href="file:///C:/Users/admin/Documents/btapweb/3.html" target="_blank">Bài 3</a></li>
-        <li><a href="file:///C:/Users/Thinkpad%20T14%20G2/Downloads/4.html" target="_blank">Bài 4</a></li>
+        <li><a href="bai1.html"> Bài 1</a></li>
+        <li><a href="2,1.html">Bài 2,1</a></li>
+        <li><a href="2,2.html">Bài 2,2</a></li>
+        <li><a href="2,3.html">Bài 2,3</a></li>
+        <li><a href="3.html">Bài 3</a></li>
+        <li><a href="4.html">Bài 4</a></li>
     </ul>
 </body>
 </html>
