--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="b2y1.html">Bài 2.1</a></li>
         <li><a href="b2y2.html">Bài 2.2</a></li>
         <li><a href="b2y3.html">Bài 2.3</a></li>
-        <li><a href="3.html">Bài 3</a></li>
+        <li><a href="b3.html">Bài 3</a></li>
     </ul>
 </body>
 </html>
