--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <li><a href="2,1.html">Bài 2,1</a></li>
         <li><a href="2,2.html">Bài 2,2</a></li>
         <li><a href="2,3.html">Bài 2,3</a></li>
-        <li><a href="3,html">Bài 3</a></li>
-        <li><a href="4,html">Bài 4</a></li>
+        <li><a href="3.html">Bài 3</a></li>
+        <li><a href="4.html">Bài 4</a></li>
     </ul>
     <h2>Bài tập buổi 2</h2>
     <ul>
