--- a/index.html
+++ b/index.html
@@ -6,24 +6,8 @@
     <title>Bài tập</title>
 </head>
 <body>
-    <h1>Bài tập buổi 1</h1>
-    <ul>
-        <li><a href="bai1.html"> Bài 1</a></li>
-        <li><a href="2,1.html">Bài 2,1</a></li>
-        <li><a href="2,2.html">Bài 2,2</a></li>
-        <li><a href="2,3.html">Bài 2,3</a></li>
-        <li><a href="3.html">Bài 3</a></li>
-        <li><a href="4.html">Bài 4</a></li>
-    </ul>
-    <h2>Bài tập buổi 2</h2>
-    <ul>
-        <li><a href="b1external.html"> Bài 1.1</a></li>
-        <li><a href="b1inline.html"> Bài 1.2</a></li>
-        <li><a href="b1internal.html"> Bài 1.3</a></li>
-        <li><a href="b2y1.html">Bài 2.1</a></li>
-        <li><a href="b2y2.html">Bài 2.2</a></li>
-        <li><a href="b2y3.html">Bài 2.3</a></li>
-        <li><a href="b3.html">Bài 3</a></li>
-    </ul>
+    <h1><a href="baitapbuoi1.html">Bài tập buổi 1</a>
+    <h1><a href="baitapbuoi2.html">Bài tập buôỉ 2</a></h1>
+    <h1><a href="Baitapbuoi3.html">Bài tập buổi 33</a></h1>
 </body>
 </html>
