--- a/baitapbuoi3.html
+++ b/baitapbuoi3.html
@@ -9,11 +9,11 @@
     <p><a href="index.html">Quay lại</a></p>
     <h1>Bài tập buổi 3</h1>
     <ul>
-        <li><a href="bài1.1buoi3.html"> Bài 1.1</a></li>
-        <li><a href="bài1.2buoi3.html"> Bài 1.2</a></li>
-        <li><a href="bài2.buoi3.html"> Bài 2</a></li>
-        <li><a href="bài3.buoi3.html">Bài 3</a></li>
-        <li><a href="baicuoibuoi3.html">Bài 4</a></li>
+        <li><a href="bai1.1.3.html"> Bài 1.1</a></li>
+        <li><a href="bai1.2.3.html"> Bài 1.2</a></li>
+        <li><a href="bai2.3.html"> Bài 2</a></li>
+        <li><a href="bai3.3.html">Bài 3</a></li>
+        <li><a href="bai4.3.html">Bài 4</a></li>
     </ul>
 </body>
 </html>
