--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Bài tập</title>
 </head>
 <body>
-    <h1><a href="baitapbuoi1.html">Bài tập buổi 1</a></h1>
-    <h1><a href="baitapbuoi2.html">Bài tập buôỉ 2</a></h1>
-    <h1><a href="baitapbuoi3.html">Bài tập buổi 3</a></h1>
+    <h1><a href="baitapbuoi1.html">Bài tập buổia 1</a>
+    <h1><a href="baitapbuoi2.html">Bài tập buổi 2</a></h1>
+    <h1><a href="Baitapbuoi3.html">Bài tập buổi 3</a></h1>
 </body>
 </html>
