--- a/bai1.2.3.html
+++ b/bai1.2.3.html
@@ -30,10 +30,12 @@ Multiple CSS declarations are separated with semicolons, and declaration blocks 
     <div class="xam">
         <h4 style="color:black">Example</h4>
         <p>In this example all <p> elements will be center-aligned, with a red text color:</p>
-        <p class="trangvavien">p { 
-             <span style="color:red">color</span>:<span style="color:blue">red</span>; 
-             <span style="color:red">text-alight</span>:<span style="color:blue">center</span> 
+        <div class="trangvavien">
+            <p><span style="color:rgb(77, 5, 70)">p {</span> </p> 
+            <p> <span style="color:red">    color</span> : <span style="color:blue"> red</span>; </p>
+            <p> <span style="color:red">    text-alight</span>:<span style="color:blue"> center</span> </p>
         }</p>
+    </div>
         <button class="nut" >Try it Yourself</button>
         
     </div>
@@ -41,7 +43,7 @@ Multiple CSS declarations are separated with semicolons, and declaration blocks 
     <div>
         <p>
             <li><span style="color:red ">p</span> is a selector in CSS (it points to the HTML element you want to style: <code>&lt;p&gt;</code>).</li>
-            <li><span style="color:red">color</span> is a property, and<span style="color:red">red</span> is the property value</li>
+            <li><span style="color:red">color</span> is a property, and <span style="color:red">red</span> is the property value</li>
             <li><span style="color:red">text-align</span> is a property, and <span style="color:red">center</span> is the property value</li>
         </p>
  
@@ -50,19 +52,32 @@ Multiple CSS declarations are separated with semicolons, and declaration blocks 
     <p class="hi">You will learn much more about CSS selectors and CSS properties in the next chapters!</p>
     <div class="btap">
         <div class="giua">
-            <p style="font-size: 20px;">Exrcise</p>
+            <p style="font-size: 50px;">Exrcise</p>
             <p>In the following example, which part is the selector?</p>
-            <p style="backgrough-color:rgb(39, 46, 58)" >p { color: red; }</p>
+            <p style="background-color:rgb(26, 34, 47);display: inline-block;" >p  {  color : red; }</p>
              <button class="chon">p</button>
              <button class="chon">{ color: red; }</button>
              <button class="chon">color</button>
              <button class="chon">red</button>
            
-            <button class="nut" >Submit Answer</button>
+            <button class="nut" style="margin-top:20px" >Submit Answer</button>
        </div>
 
     </div>
-
+    <p style="font-size:30px;text-align: center;margin-bottom: 0px;">Video: CSS Syntax</p>
+  <div class="video">  <iframe
+    width="560" 
+    height="315"  
+    src="https://www.youtube.com/embed/G8r00ZNopTE" 
+    frameborder="7" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+</iframe>
+</div>
+   <div class="cach">
+        <button class="nut" >Previous</button>
+        <button class="nut" >Next</button>
+    </div>
     <button onclick="scrollToTop()" id="backToTopBtn" title="Lên đầu trang">&#8679;</button>
     <script>
   
