--- a/bai4.3.html
+++ b/bai4.3.html
@@ -36,7 +36,9 @@
     z-index: 1000;
     transition: background-color 0.3s;
 }
-
+a{
+  text-decoration: none;
+}
     
   </style>
 </head>
@@ -62,11 +64,18 @@
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
       <i class="fa fa-envelope w3-xxlarge"></i>
       <p>Liên Hệ</p>
+      <a href="#btap" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+        <i class="fa fa-envelope w3-xxlarge"> </i>
+         <p> Bài tập </p>
+     </a>
       </a>
       <a href="baitapbuoi3.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
        <i class="fa fa-envelope w3-xxlarge"> </i>
         <p> Quay lại</p>
     </a>
+
+
+
    
   </nav>
 
@@ -120,7 +129,14 @@ Mong rằng những gì tôi chia sẻ tại đây sẽ truyền cảm hứng ch
          <p>Tạo ra các yếu tố đồ họa cho game, bao gồm nhân vật, cảnh vật, và các yếu tố trực quan khác giúp nâng cao trải nghiệm người chơi.</p>
         <li><strong>Xây dựng trò chơi thực tế ảo (VR)</strong></li>
           <p>Tìm hiểu và áp dụng công nghệ VR vào phát triển game để mang lại trải nghiệm mới mẻ và thú vị cho người chơi.</p>
-       
+     <div class="w3-padding-64 w3-content" id="btap">
+        <h2>Các liên kết bài tập học phần</h2>
+        <ul>
+      <li><p style="font-size:20px;"><a href="saobuoi1.html">Bài tập buổi 1</a></p></li>
+      <li><p style="font-size:20px;"><a href="saobuoi2.html">Bài tập buổi 2</a></p></li>
+      <li><p style="font-size:20px;"><a href="saobuoi3.html">Bài tập buổi 3</a></p></li>
+    </ul>
+     </div>  
     <div class="w3-padding-64 w3-content" id="contact">
       <h2>Liên Hệ</h2>
       <p>Email: trngbinhnguyen@gmail.com</p>
