--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1><a href="baitapbuoi1.html">Bài tập buổi 1</a></h1>
     <h1><a href="baitapbuoi2.html">Bài tập buổi 2</a></h1>
     <h1><a href="baitapbuoi3.html">Bài tập buổi 3</a></h1>
+    <h1><a href="btapbuoi4.html">Bài tập buổi 3</a></h1>
 </body>
 </html>
