--- a/bai1buoi44.html
+++ b/bai1buoi44.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="bai1buoi4.css">
 </head>
 <body>
+    <p><a href="btapbuoi4.html">Quay lại</a></p>
     <nav class="ngang">
         <button style="text-align: center;" class="nav-btn left-btn">&lsaquo;</button> <!-- ❮ -->
         <div class="menu-container">
