--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1><a href="baitapbuoi2.html">Bài tập buổi 2</a></h1>
     <h1><a href="baitapbuoi3.html">Bài tập buổi 3</a></h1>
     <h1><a href="btapbuoi4.html">Bài tập buổi 4</a></h1>
+    <h1><a href="btapbuoi4.html">Bài tập buổi 4</a></h1>
+
 </body>
 </html>
