--- a/bai2buoi44.html
+++ b/bai2buoi44.html
@@ -180,6 +180,17 @@ Mong rằng những gì tôi chia sẻ tại đây sẽ truyền cảm hứng ch
                     <li><a href="bai2buoi44.htmlhtml"> Bài 2</a></li>
                 </ul>
             </li>
+            <li class="dropdown">
+              <p class="toggle">Buổi 5 ▼</p>
+              <ul class="submenu">
+                  <li><a href="float.html"> Float</a></li>
+                  <li><a href="flexbox.html"> Flexbox</a></li>
+                  <li><a href="Grid.html"> Grid</a></li>
+                  <li><a href="#">Bài 1</a></li>
+                  <li><a href="bai2lap6.html">Bài 2</a></li>
+                  <li><a href="bai2buoi44.html">Bài 3</a></li>
+              </ul>
+          </li>
         </ul>
     </div>
     
