--- a/Grid.html
+++ b/Grid.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="dunggrid.css">
 </head>
 <body>
+    <p><a href="baitapbuoi5.html">Quay lại</a></p>
     <section class="news-section">
         <h2>Báo mạng</h2>
         <div class="news-grid">
