--- a/float.html
+++ b/float.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="dungfloat.css">
 </head>
 <body>
+    <p><a href="baitapbuoi5.html">Quay lại</a></p>
     <div class="container">
         <div class="title">Báo mạng</div>
         <div class="news-wrapper">
