--- a/baitapbuoi5.html
+++ b/baitapbuoi5.html
@@ -12,7 +12,7 @@
         <li><a href="float.html"> Float</a></li>
         <li><a href="flexbox.html"> Flexbox</a></li>
         <li><a href="Grid.html"> Grid</a></li>
-        <li><a href="#">Bài 1</a></li>
+        <li><a href="bai1lap6.html">Bài 1</a></li>
         <li><a href="bai2lap6.html">Bài 2</a></li>
         <li><a href="bai2buoi44.html">Bài 3</a></li>
     </ul>
