--- a/bai2buoi44.html
+++ b/bai2buoi44.html
@@ -186,7 +186,7 @@ Mong rằng những gì tôi chia sẻ tại đây sẽ truyền cảm hứng ch
                   <li><a href="float.html"> Float</a></li>
                   <li><a href="flexbox.html"> Flexbox</a></li>
                   <li><a href="Grid.html"> Grid</a></li>
-                  <li><a href="#">Bài 1</a></li>
+                  <li><a href="bai1lap6.html">Bài 1</a></li>
                   <li><a href="bai2lap6.html">Bài 2</a></li>
                   <li><a href="bai2buoi44.html">Bài 3</a></li>
               </ul>
