--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1><a href="baitapbuoi3.html">Bài tập buổi 3</a></h1>
     <h1><a href="btapbuoi4.html">Bài tập buổi 4</a></h1>
     <h1><a href="baitapbuoi5.html">Bài tập buổi 5</a></h1>
+    <h1><a href="baitapbuoi6.html">Bài tập buổi 6</a></h1>
 </body>
 </html>
