--- a/bai1buoi6.html
+++ b/bai1buoi6.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    p><a href="baitapbuoi6.html">Quay lại</a></p>
+   <p><a href="baitapbuoi6.html">Quay lại</a></p>
     <div class="title">Bài hát yêu thích</div>
     <div class="album-container">
         <div class="album">
