--- a/bai2buoi44.html
+++ b/bai2buoi44.html
@@ -191,6 +191,15 @@ Mong rằng những gì tôi chia sẻ tại đây sẽ truyền cảm hứng ch
                   <li><a href="bai2buoi44.html">Bài 3</a></li>
               </ul>
           </li>
+          <li class="dropdown">
+            <p class="toggle">Buổi 6 ▼</p>
+            <ul class="submenu">
+              <li><a href="bai1buoi6.html">Bài 1</a></li>
+              <li><a href="bai2buoi6.html">Bài 2</a></li>
+              <li><a href="bai3buoi6.html">Bài 3</a></li>
+              <li><a href="bai2buoi44.html">Bài 4</a></li>
+            </ul>
+        </li>
         </ul>
     </div>
     
