--- a/baitapbuoi6.html
+++ b/baitapbuoi6.html
@@ -10,6 +10,9 @@
     <h1>Bài tập buổi 6</h1>
     <ul>
         <li><a href="bai1buoi6.html">Bài 1</a></li>
+        <li><a href="bai2buoi6.html">Bài 2</a></li>
+        <li><a href="bai3buoi6.html">Bài 3</a></li>
+        <li><a href="bai2buoi44.html">Bài 4</a></li>
     </ul>
 </body>
 </html>
