--- a/bai2buoi6.html
+++ b/bai2buoi6.html
@@ -81,5 +81,8 @@
             <p class="add-to-cart" >Add to Cart</p>
         </div>
     </div>
+    <div class="quay-lai">
+        <p><a href="baitapbuoi6.html">Quay lại</a></p>
+    </div>
 </body>
 </html>
