--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1><a href="btapbuoi4.html">Bài tập buổi 4</a></h1>
     <h1><a href="baitapbuoi5.html">Bài tập buổi 5</a></h1>
     <h1><a href="baitapbuoi6.html">Bài tập buổi 6</a></h1>
+    <h1><a href="baitapbuoi8.html">Bài tập buổi 8</a></h1>
+    <h1><a href="baitapbuoi9.html">Bài tập buổi 9</a></h1>
 </body>
 </html>
