--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h1><a href="baitapbuoi6.html">Bài tập buổi 6</a></h1>
     <h1><a href="baitapbuoi8.html">Bài tập buổi 8</a></h1>
     <h1><a href="baitapbuoi9.html">Bài tập buổi 9</a></h1>
+    <h1><a href="baitapbuoi10.html">Bài tập buổi 10</a></h1>
 </body>
 </html>
